syntax = "proto3";

package user;

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User API"
  }
};
option go_package = "api/userpb;userprb";

import "protoc-gen-openapiv2/options/annotations.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message UserDetailsRequest {}

message UserDetailsResponse {
  // User ID
  uint32 user_id = 1;
  // Product Tour
  bool product_tour_completed = 2;
}

message UserUpdateRequest {
  // Product Tour
  bool product_tour_completed = 2;
}

// UserService contains rpcs related to user data
service User {
  rpc GetUser(UserDetailsRequest) returns (UserDetailsResponse) {
    option (google.api.http) = {
      get: "/v1/user"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get user details"
      description: "Retrieve user details from PMM server"
    };
  }
  rpc UpdateUser(UserUpdateRequest) returns (UserDetailsResponse) {
    option (google.api.http) = {
      put : "/v1/user"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update user"
      description: "Update details of given user in PMM server"
    };
  }
}
